# ophanic

./: .gitignore  LICENSE.md  README.md  SPEC.md  pyproject.toml
.daedalus/: project-map.md  session-summaries.md
.daedalus/roadmap/: index.json
.daedalus/theseus/reports/: 2026-02-04-implementation-roadmap.md  2026-02-04-ophanic-codebase-analysis.md  2026-02-04-quick-reference.md
ab-test/: RESULTS.md  attempt-a-no-diagram.jsx  attempt-a-notes.md  attempt-b-notes.md  attempt-b-with-diagram.jsx  dashboard.ophanic  design-spec.md
ab-test/demo/: package-lock.json  package.json
ab-test/demo/src/: App.jsx  DashboardA.jsx  DashboardB.jsx
doc/: asymmetric-wager.md  kindred-pitch-doc.md  ophanic-implications.md  ophanic-perception-architecture.md  ophanic-perception-roadmap.md  ophanic-social-memory-SPEC.md  ophanic-thesis-blurb.md  self-portrait.txt  text-is-all-you-need.md  thymos-SPEC.md
examples/dashboard-app/: dashboard.oph  index.html  package.json
examples/dashboard-app/src/: App.jsx  index.css  main.jsx  tokens.css
layouts/admin-frontend/: activity.oph  chat.oph  conversations.oph  dashboard.oph  dreams.oph  goals.oph  knowledge.oph  layout.oph  memory-system.oph  memorysystem.oph  metrics.oph
ophanic/: __init__.py  __main__.py  box_detector.py  cli.py  errors.py  hierarchy.py  lexer.py  models.py  parser.py  proportion.py  pyproject.toml
ophanic/adapters/: __init__.py  component_analyzer.py  css_parser.py  figma.py  react.py  react_reverse.py
ophanic/tests/: __init__.py  test_parser.py  test_react_adapter.py  test_reverse_adapter.py
ophanic/tests/fixtures/: components.oph  nested.oph  responsive.oph  simple.oph  simple_react.jsx
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: ophanic.md
plugin/commands/: diagram.md
social_memory/: PLAN.md  __init__.py  demo.py  models.py  rendering.py  thymos_integration.py  tools.py
social_memory/tests/: test_social_memory.py
thymos/: PLAN.md  __init__.py  demo.py  dynamics.py  models.py  serialization.py  summarizer.py
thymos/tests/: __init__.py  test_thymos.py
velvet/: PLAN.md  __init__.py  actions.py  agent.py  demo.py  example_output.txt  npc.py  perception.py  simulation.py  world.py
(+6 files in other folders)
